--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 readme = "README.md"
 requires-python = ">=3.7"
 license = { text = "MIT License" }
-dependencies = []
+dependencies = ["arxivscraper", "pandas"]
 [project.optional-dependencies]
 dev = ["arxiv_scrapper[test]", "arxiv_scrapper[docs]", "tox"]
 test = ["pytest", "pytest-cov", "coverage", "black", "isort", "pylint", "mypy"]
